<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action_error_content">Sorry, an unexpected error occurred while trying to complete this action.</string>
    <string name="actions_dialog_content">What would you like to do with this wallpaper?</string>
    <string name="added_to_favorites">"'%1$s' has been added to favorites."</string>
    <string name="all">All</string>
    <string name="allan_description">"First an icon pack creator, then a themer, now also a developer.
I have helped with part of this dashboard's development."</string>
    <string name="allow">Allow</string>
    <string name="amoled_theme">Amoled</string>
    <string name="animations_setting_content">This may cause lag in some devices.</string>
    <string name="animations_setting_title">Enable animations</string>
    <string name="app_description">A great wallpapers app with hundreds of cool pictures.</string>
    <string name="app_name">STAGPapers</string>
    <string name="app_unlicensed">This app is not licensed</string>
    <string name="app_unlicensed_close">Close</string>
    <string name="app_unlicensed_description">This application is not licensed nor valid. Please download the app from a trusted source.</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="apply_successful">Wallpaper applied successfully to %1$s</string>
    <string name="apply_successful_short">Wallpaper applied successfully</string>
    <string name="apply_to">Apply to:</string>
    <string name="apply_with_other_app">Apply with other app</string>
    <string name="applying_wallpaper">"Applying '%1$s'…"</string>
    <string name="auto_amoled">Automatic Light-Amoled</string>
    <string name="auto_dark">Automatic Light-Dark</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="changelog">Changelog</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_collections_summary">Choose the collections to take wallpapers from. Current selected collections: %1$s</string>
    <string name="choose_collections_title">Choose collections</string>
    <string name="choose_folder">Choose</string>
    <string name="clear_favorites_confirmation">Are you sure you want to delete the favorites database?</string>
    <string name="clear_favorites_setting_content">Clear the list of your favorite wallpapers</string>
    <string name="clear_favorites_setting_title">Clear favorites database</string>
    <string name="close">Close</string>
    <string name="collections">Collections</string>
    <string name="copied_to_clipboard">Copied color to clipboard</string>
    <string name="create_folder">Create folder</string>
    <string name="dark_theme">Dark</string>
    <string name="dashboard_copyright">I am a passionate and creative Android developer and the creator of the dashboard.</string>
    <string name="data_cache_confirmation">Are you sure you want to delete app data, cache and settings?</string>
    <string name="data_cache_setting_content">"This will delete app cache and preferences.
Current cache size: %1$s"</string>
    <string name="data_cache_setting_title">Clear app data and cache</string>
    <string name="days">Days</string>
    <string name="deep_search_content">Search by name and collection</string>
    <string name="deep_search_title">Enable deep search</string>
    <string name="default_download_folder">%1$s/Frames/Wallpapers</string>
    <string name="define_piracychecker" />
    <string name="dev_contributions">Development Help</string>
    <string name="dismiss">Dismiss</string>
    <string name="donate">Donate</string>
    <string name="donate_error">Unexpected error with code %1$s occurred due to %2$s</string>
    <string name="donate_error_unknown">unknown reasons</string>
    <string name="donate_success_content">"Thank you so much for your donation. I really appreciate it and I'm glad you're enjoying %1$s."</string>
    <string name="donate_success_title">Thank you</string>
    <string name="download">Download</string>
    <string name="download_successful">"Wallpaper downloaded successfully to '%1$s'"</string>
    <string name="download_successful_short">Wallpaper downloaded successfully</string>
    <string name="downloading_wallpaper">"Downloading '%1$s'…"</string>
    <string name="empty" />
    <string name="empty_section">Nothing found</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="error_title">Error</string>
    <string name="every_x">Every %1$s</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="file_create_new">Create new</string>
    <string name="file_exists">Wallpaper is already downloaded. Do you want to download to replace it?</string>
    <string name="file_replace">Replace</string>
    <string name="frames_dashboard">Dashboard</string>
    <string name="frames_notifications_action">jahirfiquitiva.libs.frames.NOTIFICATIONS_ACTION</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home_lock_screen">Home and lock screens</string>
    <string name="home_screen">Home screen</string>
    <string name="hours">Hours</string>
    <string name="info">Information</string>
    <string name="json_url">https://github.com/Rakhi15/android_packages_apps_wallpapers/tree/Stag9.0/app/upload/wallpapers.json</string>
    <string name="legal">Legal</string>
    <string name="library_piracychecker_author">Rakesh Rakhi Samuel</string>
    <string name="library_piracychecker_authorWebsite">https://github.com/Rakhi15</string>
    <string name="library_piracychecker_isOpenSource">true</string>
    <string name="library_piracychecker_libraryDescription">PiracyChecker prevents your app from being pirated / cracked using Google Play Licensing (LVL), APK signature protection and more.</string>
    <string name="library_piracychecker_libraryName">PiracyChecker</string>
    <string name="library_piracychecker_libraryWebsite">https://github.com/javiersantos/PiracyChecker</string>
    <string name="library_piracychecker_licenseId">apache_2_0</string>
    <string name="library_piracychecker_repositoryLink">https://github.com/javiersantos/PiracyChecker</string>
    <string name="license_error_content">Sorry, there was an error while checking your license. Please try again later.</string>
    <string name="license_invalid_content">Sorry, but we have detected that your license for %1$s is not valid. This can also be because you are using pirate apps. %2$s. If you think this is an error, please try again later. Otherwise, please download the app from a valid store.</string>
    <string name="license_invalid_content_extra">"Or specifically: '%1$s' app, so please uninstall it"</string>
    <string name="license_invalid_title">You shall not pass!</string>
    <string name="license_valid_content">Thanks for downloading %1$s from a valid store. Enjoy it!</string>
    <string name="load_hi_res_pictures_content">Load full resolution pictures in grid</string>
    <string name="load_hi_res_pictures_title">Full resolution previews</string>
    <string name="navbar_color_setting_content">"Color navigation bar with app's primary dark color"</string>
    <string name="navbar_color_setting_title">Color navigation bar</string>
    <string name="notifications_title">Notifications</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_only_on_wifi">Refresh on WiFi only</string>
    <string name="refresh_only_on_wifi_summary">Refresh wallpapers only when device is connected to a WiFi network.</string>
    <string name="refresh_wallpapers_every">Refresh wallpapers…</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="storage_settings_title">Storage</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="theme_setting_content">Choose the main theme for the app</string>
    <string name="theme_setting_title">App theme</string>
    <string name="ui_settings_title">User Interface</string>
    <string name="wallpapers_columns_setting_content">Choose the amount of columns you want to see for wallpapers</string>
    <string name="wallpapers_columns_setting_title">Wallpapers columns</string>
    <string name="wallpapers_download_location_setting_content">"Change location to download wallpapers.
Current location: %1$s"</string>
    <string name="wallpapers_download_location_setting_title">Wallpapers download location</string>
</resources>