<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="preferences"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/ui_settings_title" android:key="ui_settings">
        <Preference android:persistent="true" android:title="@string/theme_setting_title" android:key="theme" android:summary="@string/theme_setting_content" />
        <SwitchPreference android:persistent="true" android:title="@string/navbar_color_setting_title" android:key="color_navbar" android:summary="@string/navbar_color_setting_content" android:defaultValue="true" />
        <Preference android:persistent="true" android:title="@string/wallpapers_columns_setting_title" android:key="columns" android:summary="@string/wallpapers_columns_setting_content" />
        <SwitchPreference android:persistent="true" android:title="@string/animations_setting_title" android:key="animations" android:summary="@string/animations_setting_content" android:defaultValue="true" />
        <SwitchPreference android:persistent="true" android:title="@string/load_hi_res_pictures_title" android:key="hi_res_pics" android:summary="@string/load_hi_res_pictures_content" android:defaultValue="false" />
        <SwitchPreference android:persistent="true" android:title="@string/deep_search_title" android:key="deep_search" android:summary="@string/deep_search_content" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/storage_settings_title" android:key="storage_settings">
        <Preference android:persistent="true" android:title="@string/wallpapers_download_location_setting_title" android:key="wallpapers_download_location" android:summary="@string/wallpapers_download_location_setting_content" />
        <Preference android:persistent="true" android:title="@string/data_cache_setting_title" android:key="clear_data" android:summary="@string/data_cache_setting_content" />
        <Preference android:persistent="true" android:title="@string/clear_favorites_setting_title" android:key="clear_database" android:summary="@string/clear_favorites_setting_content" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notifications_title" android:key="notifications_settings">
        <SwitchPreference android:persistent="true" android:title="@string/enable_notifications" android:key="enable_notifications" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/legal" android:key="legal">
        <Preference android:persistent="true" android:title="@string/privacy_policy" android:key="privacy" />
        <Preference android:persistent="true" android:title="@string/terms_conditions" android:key="terms" />
    </PreferenceCategory>
</PreferenceScreen>