<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@id/main" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <jahirfiquitiva.libs.kext.ui.layouts.FixedElevationAppBarLayout android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:id="@id/appbar" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <jahirfiquitiva.libs.frames.ui.widgets.CustomToolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" android:title="@string/app_name" app:layout_scrollFlags="enterAlways" app:popupTheme="?popupMenuStyle" />
    </jahirfiquitiva.libs.kext.ui.layouts.FixedElevationAppBarLayout>
    <android.support.v4.widget.NestedScrollView android:id="@id/content" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:id="@id/every_title" android:padding="@dimen/fabs_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/refresh_wallpapers_every" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:id="@id/every_summary" android:paddingLeft="@dimen/fabs_margin" android:paddingRight="@dimen/fabs_margin" android:paddingBottom="@dimen/cards_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatSeekBar android:id="@id/every_seekbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/fabs_margin" />
            <View android:id="@id/divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/wifi_only" android:background="?selectableItemBackground" android:paddingLeft="@dimen/fabs_margin" android:paddingTop="@dimen/fabs_margin" android:paddingBottom="@dimen/fabs_margin" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:paddingRight="@dimen/cards_margin" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:id="@id/wifi_only_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/refresh_only_on_wifi" />
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:id="@id/wifi_only_summary" android:paddingTop="@dimen/cards_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/refresh_only_on_wifi_summary" />
                </LinearLayout>
                <android.support.v7.widget.AppCompatCheckBox android:gravity="center" android:layout_gravity="center" android:id="@id/wifi_checkbox" android:padding="@dimen/fabs_margin" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <View android:id="@id/other_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:orientation="vertical" android:id="@id/choose_collections" android:background="?selectableItemBackground" android:padding="@dimen/fabs_margin" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:id="@id/choose_collections_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/choose_collections_title" />
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:id="@id/choose_collections_summary" android:paddingTop="@dimen/cards_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/choose_collections_summary" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>